# woodcode

./: .gitignore  README.md  __init__.py  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  insert_mock_ephys.py  make_env.yml  mock_ephys_nwbfile.py  nwb_h7100.py  pyproject.toml  setup.py  spyglass_requirements.md  tables.txt  tables_ad_ko.txt  tables_ad_wt.txt  tables_ad_wt_clock_reset.txt  tables_ad_wt_error_epoch.txt  tables_ad_wt_no_video_no_raw.txt  tables_jv_ko.txt  tables_jv_ko_day1.txt  tables_jv_ko_day2.txt  tables_jv_wt.txt  tables_jv_wt_adult_alignment_h5.txt  tables_jv_wt_day1.txt  tables_jv_wt_day2.txt  tables_jv_wt_no_raw.txt  tables_jv_wt_no_videos.txt
conversion_scripts/: convert_session.py  nwb_h7100.py
duszkiewicz_2025/: convert_single_session.py  duszkiewicz_metadata.yaml  insert_single_session.py  session_to_nwb.py  session_to_spyglass.py  temporal_alignment.py
duszkiewicz_2026/: _verify_stub.py  convert_single_session.py  duszkiewicz_metadata.yaml  insert_single_session.py  session_to_nwb.py  session_to_spyglass.py  temporal_alignment.py
general/: behavioural_features.py  linear_track.py  testLdog.py
legacy_conversion_scripts/: nwb_h7100.py
moore_2025/: README.md  adult_metadata.yaml  convert_all_sessions.py  convert_all_videos.py  convert_edge_case_sessions.py  convert_example_sessions.py  convert_session.py  convert_single_session.py  example_notebook.ipynb  insert_all_sessions.py  insert_edge_case_sessions.py  insert_example_sessions.py  insert_session.py  insert_single_session.py  juvenile_metadata.yaml  metadata.yaml  session_to_nwb.py  session_to_spyglass.py  temporal_alignment.py
moore_2025/spyglass_extensions/: imported_histology_images.py  imported_pseudo_emg.py
nwb/: create_nwb.py  import_data.py  io.py
spyglass_insertion_scripts/: insert_session.py
woodcode/: __init__.py  utils.py
woodcode.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
woodcode/cell_analysis/: __init__.py  spatial_tuning.py
woodcode/general/: __init__.py  behaviour.py  behavioural_features.py  dataset.py  io.py  io_functions.py  linear_track.py  process.py  tickatlab.py
woodcode/nwb/: __init__.py  convert.py  dat_file_data_chunk_iterator.py  edit.py  import_functions.py  io.py  multi_segment_recording_data_chunk_iterator.py  nwb_functions.py  video_codec.py
woodcode/population_analysis/: decoding.py
woodcode/spatial_tuning/: tuning_1d.py
woodcode/video/: calibrate_tracking.py
