[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "woodcode"
version = "0.1.1"
description = "A python package for neural and behavioural data analysis in Wood/Dudchenko lab"
readme = "README.md"
authors = [
    {name = "Wood/Dudchenko lab members", email = "a.j.duszkiewicz@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "pandas>=1.3.0",
    "pynwb>=2.0.0",
    "openpyxl>=3.0.0",
    "hdmf>=3.0.0",
    "h5py>=3.0.0",
    "pytz>=2021.1",
    "pynapple==0.7.1",
    "selenium"
]

[project.urls]
Homepage = "https://github.com/Wood-Dudchenko-lab/woodcode"
"Bug Tracker" = "https://github.com/Wood-Dudchenko-lab/woodcode/issues"

[tool.setuptools.packages.find]
include = ["woodcode", "woodcode.*"]