[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "woodcode"
version = "0.1.4"
description = "A python package for neural and behavioural data analysis in Wood/Dudchenko lab"
readme = "README.md"
authors = [
    {name = "Wood/Dudchenko lab members", email = "a.j.duszkiewicz@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Neural Data Analysis",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "pandas>=1.3.0",
    "pynwb @ git+https://github.com/NeurodataWithoutBorders/pynwb.git@dev",
    "openpyxl>=3.0.0",
    "hdmf>=3.0.0",
    "h5py>=3.0.0",
    "pytz>=2021.1",
    "pynapple==0.7.1",
    "pyyaml>=6.0",
    "seaborn>=0.11.0",
    "fmatch>=0.0.9",
    "jupyter>=1.1.1",
    "opencv-python",
    "spikeinterface",
    "neuroconv",
    "probeinterface",
    "scikit-learn>=1.7.2",
    "ndx-optogenetics==0.3.0",
]

[project.urls]
Homepage = "https://github.com/Wood-Dudchenko-lab/woodcode"
"Bug Tracker" = "https://github.com/Wood-Dudchenko-lab/woodcode/issues"

[tool.setuptools.packages.find]
include = ["woodcode", "woodcode.*", "moore_2025", "duszkiewicz_2025"]

[project.scripts]
calibrate-tracking = "woodcode.video.calibrate_tracking:main"
